# qjswrapper

./: .gitignore  CMakeLists.txt  README.md  readme.md  xmake.lua
.github/workflows/: test.yml  tests.yml
examples/: example_bytecode.cpp  example_class.cpp  example_demo.cpp  example_error_global.cpp  example_error_module.cpp  example_global.cpp  example_module.cpp  example_object.cpp  example_raylib.cpp  example_simple.cpp  example_value.cpp
include/: qjswrap.hpp  qjswrapper.hpp
src/: class.hpp  converter.hpp  engine.cpp  engine.hpp  game.js  main.cpp  module.cpp  module.hpp  object.hpp  qjswrapper.hpp  ship.js  util.hpp  value.cpp  value.hpp
src/js/: game.js  ship.h  ship.js
src/lib/: qjswrapper.hpp
src/main/: class.hpp  object.hpp
src/test/: test_bytecode.cpp  test_class.cpp  test_concurrency.cpp  test_converters.cpp  test_engine.cpp  test_memory.cpp  test_module.cpp  test_object.cpp
src/tests/: test_errors.cpp  test_math.cpp  test_raylib.cpp  test_ship.cpp
tests/: test_bytecode.cpp  test_class.cpp  test_concurrency.cpp  test_converters.cpp  test_engine.cpp  test_memory.cpp  test_module.cpp  test_object.cpp  test_value.cpp
tools/: amalgamate.py
