cmake_minimum_required(VERSION 4.2)
project(qjswrapper LANGUAGES CXX)

option(QJSWRAPPER_BUILD_EXAMPLES "Build qjswrapper examples" ${PROJECT_IS_TOP_LEVEL})
option(QJSWRAPPER_BUILD_TESTS "Build qjswrapper unit tests" ${PROJECT_IS_TOP_LEVEL})

# Include the FetchContent module
include(FetchContent)

# -----------------------------------------------------------------------------
# Dependency 1: quickjs-ng
# -----------------------------------------------------------------------------
FetchContent_Declare(
        quickjs-ng
        GIT_REPOSITORY https://github.com/quickjs-ng/quickjs.git
        GIT_TAG        v0.15.1
)

# -----------------------------------------------------------------------------
# Dependency 2: Catch2 (for tests)
# -----------------------------------------------------------------------------
FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG        v3.4.0
)

# -----------------------------------------------------------------------------
# Dependency 3: Raylib
# -----------------------------------------------------------------------------
FetchContent_Declare(
        raylib
        GIT_REPOSITORY https://github.com/raysan5/raylib.git
        GIT_TAG        6.0
)

# Populate and make the targets available
FetchContent_MakeAvailable(quickjs-ng Catch2 raylib)

# -----------------------------------------------------------------------------
# Custom Target: Amalgamate task
# -----------------------------------------------------------------------------
find_package(Python3 REQUIRED)

add_custom_target(amalgamate
        COMMAND Python3::Interpreter
        ${CMAKE_CURRENT_SOURCE_DIR}/tools/amalgamate.py
        ${CMAKE_CURRENT_SOURCE_DIR}/src/qjswrapper.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/include/qjswrapper.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        COMMENT "Running custom amalgamation script..."
        VERBATIM
)

# -----------------------------------------------------------------------------
# Target: qjswrapper (Header-only Library)
# -----------------------------------------------------------------------------
add_library(qjswrapper INTERFACE)

target_include_directories(qjswrapper INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

# Modern target-based C++ standard enforcement
# This propagates C++23 requirements to any target linking to qjswrapper
target_compile_features(qjswrapper INTERFACE cxx_std_23)

# Link the library target generated by the quickjs-ng repository
target_link_libraries(qjswrapper INTERFACE qjs)

# -----------------------------------------------------------------------------
# Target: Unit Tests
# -----------------------------------------------------------------------------
if(QJSWRAPPER_BUILD_TESTS)
    file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "tests/*.cpp")

    add_executable(unit-tests ${TEST_SOURCES})
    target_link_libraries(unit-tests PRIVATE
            qjswrapper
            Catch2::Catch2WithMain
    )
endif()

# -----------------------------------------------------------------------------
# Targets: Examples
# -----------------------------------------------------------------------------
if(QJSWRAPPER_BUILD_EXAMPLES)
    set(EXAMPLES
            example_class
            example_global
            example_object
            example_simple
            example_value
    )

    foreach(example ${EXAMPLES})
        add_executable(${example} examples/${example}.cpp)
        target_link_libraries(${example} PRIVATE qjswrapper)
    endforeach()

    # Special example with raylib dependency
    add_executable(example_raylib examples/example_raylib.cpp)
    target_link_libraries(example_raylib PRIVATE
            qjswrapper
            raylib
    )
endif()